--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -23,11 +23,13 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^0.1.2
-  
+
   bubble_bottom_bar: ^1.2.0
   carousel_pro: ^1.0.0
   fancy_on_boarding: ^1.5.0
   fl_chart: ^0.8.7
+  http: ^0.12.0+2
+  provider: ^3.2.0
 
 dev_dependencies:
   flutter_test:
