--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -29,6 +29,7 @@ dependencies:
   fancy_on_boarding: ^1.5.0
   fl_chart: ^0.8.7
   http: ^0.12.0+2
+  intl: ^0.16.0 
   provider: ^3.2.0
 
 dev_dependencies:
